--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^7.2.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-amazing-proxy": "^1.0.61",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node node_modules/react-amazing-proxy/start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
